[FIX] : 약관 기능 Auth로 이동